# keenetic-control-plane

./: .gitattributes  .gitignore  AGENTS.md  README.md  pyproject.toml
.cursor/: hooks.json
.cursor/agents/: adversarial-reviewer.md  implementer.md  operational-orchestrator.md  principal-arbiter.md  verifier.md
.cursor/hooks/: after-shell-papercuts.ps1  session-start.ps1  stop-papercuts-nudge.ps1
.cursor/rules/: autonomous-orchestration.mdc  product-core.mdc  project-docs-lifecycle.mdc  skills-ru-description.mdc
.cursor/skills/autonomous-task/: SKILL.md  contracts.md  tier-rubric.md
.cursor/skills/browser-verify/: SKILL.md
.cursor/skills/maintain-project-docs/: SKILL.md
docs/: ARCHITECTURE.md  CANONICAL.md  COMPATIBILITY.md  DOMAIN_MODEL.md  LEGACY_MAP.md  README.md  STATUS.yaml  VISION.md  autonomous-agent-orchestration.md  bootstrap-scaffold.md  cursor-agent-best-practices.md  cursor-native-controls.md  cursor-primitives.md  docs-map-schema.md  docs-map.json  living-documentation.md  papercuts.md  project-environment.md  project-integrations.md  project-state.md  skills-russian-descriptions.md
docs/adrs/: 0001-python-package-fastapi-host.md  0002-persistence-jobs-sqlite.md  0003-security-auth-secrets.md  0004-product-capability-scope.md
docs/contracts/: AI_HANDOFF.md  API_CONTRACT.md  HARDWARE_GATES.md  PERSISTENCE_CONTRACT.md  RCI_POLICY.md  README.md  ROADMAP.md  SCENARIOS.md  SECURITY_OPS.md  TEST_STRATEGY.md
project-workflow/: session-checklist.md
prompting/: README.md  context-hygiene.md  lean-prompts-autonomy.md  plan-then-build.md  verify-loop.md
roles/: README.md  implementer.md  reviewer.md
router_control/: __init__.py  composition.py
router_control/application/: provisioning.py  traffic_discovery.py
router_control/domain/: __init__.py  entities.py  enums.py  errors.py  ids.py  policies.py  traffic.py
router_control/persistence/: __init__.py  connection.py  errors.py  ids.py  migrations.py  store.py
router_control/ports/: clock.py  router_control.py  vault.py
router_control_host/: __init__.py  app.py  auth.py  errors.py  routes.py  state.py
scripts/: papercuts.cmd  papercuts.ps1  project-doctor.ps1  validate-project-docs.ps1
subagents/: README.md  verifier.md
tests/: __init__.py  conftest.py  test_async_continuation.py  test_domain_invariants.py  test_fake_lifecycle_happy.py  test_fake_lifecycle_negatives.py  test_host_api.py  test_import_isolation.py  test_network_ban.py  test_persistence.py  test_traffic_discovery.py  test_vault.py
(+8 files in other folders)
