[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "router-control"
version = "0.1.0"
description = "Portable Router Control domain core with vendor-neutral ports"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
host = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.8",
    "httpx>=0.27",
    "fastapi>=0.110",
    "uvicorn>=0.27",
]

[tool.setuptools.packages.find]
include = ["router_control*", "router_control_host*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["router_control", "router_control_host", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
explicit_package_bases = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
files = ["router_control"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "router_control_host.*"
ignore_errors = true
